@@ -4,6 +4,14 @@ from ftw.contacts.utils import safe_html
 from plone import api
 from Products.Five.browser import BrowserView
 
+# Check for ftw.geo
+try:
+    from ftw.geo import interfaces
+except ImportError:
+    HAS_FTW_GEO = False
+else:
+    HAS_FTW_GEO = True
+
 
 class ContactView(BrowserView):
     """Contact view
@@ -13,6 +21,11 @@ class ContactView(BrowserView):
 
     def safe_html(self, text):
         return safe_html(text)
+
+    def show_map(self):
+        """
+        """
+        return HAS_FTW_GEO
 
 
 class ContactSummary(BrowserView):
